--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9943,3 +9943,19 @@ table p {
   }
 
 }
+
+.video-reviews{
+
+}
+
+.video-reviews .video-container{
+  height: 400px;
+  border-radius: 25px;
+}
+
+.video-reviews video{
+  width: 100%;
+  height: 100%;
+  background: #252525;
+  border-radius: 25px;
+}
